test/classes/bradc/syncAsClass2.good
syncAsClass2.chpl:5: error: type mismatch in assignment from int(64) to object
