test/classes/bradc/syncAsClass2.chpl
var myObject: object;

var mysync: sync int;

myObject = mysync;
